--- a/nicepage.css
+++ b/nicepage.css
@@ -29521,11 +29521,11 @@ a.u-button-style.u-button-style.active > .u-active-palette-3-light-2[class*="u-b
 li.active > a.u-button-style.u-button-style.u-active-palette-3-light-2,
 li.active > a.u-button-style.u-button-style.u-active-palette-3-light-2[class*="u-border-"],
 input.u-field-input.u-field-input.u-active-palette-3-light-2:checked {
-  color: #111111 !important;
-  background-color: #f9e79b !important;
+  color: #0c2960 !important;
+  background-color: #ffffff !important;
 }
 a.u-link.u-hover-palette-3-light-2:hover {
-  color: #f9e79b !important;
+  color: #ffffff !important;
 }
 .u-palette-3-light-3,
 .u-body.u-palette-3-light-3,
@@ -29604,7 +29604,7 @@ section.u-palette-3-base:before,
 .u-field-input.u-palette-3-base,
 .u-button-style.u-palette-3-base,
 .u-button-style.u-palette-3-base[class*="u-border-"] {
-  color: #111111 !important;
+  color: #ffffff !important;
   background-color: #0c2960 !important;
 }
 .u-button-style.u-palette-3-base:hover,
@@ -31977,7 +31977,7 @@ section.u-grey-80:before,
 .u-container-layout.u-container-layout.u-grey-80:before,
 .u-table-alt-grey-80 tr:nth-child(even) {
   color: #ffffff;
-  background-color: #333333;
+  background-color: #0c2960;
 }
 .u-input.u-grey-80,
 .u-field-input.u-grey-80,
@@ -39639,7 +39639,7 @@ li.active > a.u-button-style.u-text-palette-3-base,
 li.active > a.u-button-style.u-text-palette-3-base[class*="u-border-"],
 a.u-button-style.u-text-palette-3-base,
 a.u-button-style.u-text-palette-3-base[class*="u-border-"] {
-  color: #f1c50e !important;
+  color: #0c2960 !important;
 }
 a.u-button-style.u-text-palette-3-base:hover,
 a.u-button-style.u-text-palette-3-base[class*="u-border-"]:hover,
@@ -39681,7 +39681,7 @@ a.u-button-style.u-button-style.active > .u-text-active-palette-3-base[class*="u
 .u-button-style:hover > .u-text-hover-palette-3-base .u-svg-link,
 .u-button-style.u-button-style.active > .u-text-active-palette-3-base .u-svg-link,
 .u-text-hover-palette-3-base:focus .u-svg-link {
-  fill: #f1c50e;
+  fill: #0c2960;
 }
 .u-link.u-text-palette-3-base:hover {
   color: #d9b10d !important;
